tests bugfix