@@ -1,10 +1,12 @@
 package com.tim20.rivera.service;
 
+import com.tim20.rivera.dto.AdventureDTO;
 import com.tim20.rivera.dto.BoatDTO;
 import com.tim20.rivera.dto.BoatProfileDTO;
 import com.tim20.rivera.dto.SearchParams;
 import com.tim20.rivera.model.*;
 import com.tim20.rivera.repository.*;
+import org.apache.commons.lang.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.core.env.ConfigurableEnvironment;
@@ -22,7 +24,9 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
+import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -41,6 +45,8 @@ public class BoatService {
     private BoatOwner temporaryOwner;
     @Autowired
     private TagService tagService;
+    @Autowired
+    private AvailabilityService availabilityService;
 
     @Autowired
     private ReviewService reviewService;
@@ -182,9 +188,13 @@ public class BoatService {
         boat.setCurrentPricelist(pricelist);
         tagService.addTagsIfNotPresent(dto.getTags());
         boat.setTags(tagService.getTagsByNames(dto.getTags()));
-        boat.setOwner(boatOwnerRepository.findById(((BoatOwner) (SecurityContextHolder.getContext().getAuthentication().getPrincipal())).getUsername()).get());
-        boatOwnerRepository.findById(((BoatOwner) (SecurityContextHolder.getContext().getAuthentication().getPrincipal())).getUsername()).get().getRentables().add(boat);
-
+        if (!Arrays.asList(env.getActiveProfiles()).contains("test")) {
+            boat.setOwner(boatOwnerRepository.findById(((BoatOwner) (SecurityContextHolder.getContext().getAuthentication().getPrincipal())).getUsername()).get());
+            boatOwnerRepository.findById(((BoatOwner) (SecurityContextHolder.getContext().getAuthentication().getPrincipal())).getUsername()).get().getRentables().add(boat);
+        } else {
+            boat.setOwner(boatOwnerRepository.findById("bowner").get());
+            boatOwnerRepository.findById("bowner").get().getRentables().add(boat);
+        }
     }
 
     private Map<Integer, Integer> dtoRoomsToRooms(String rooms) {
@@ -201,7 +211,7 @@ public class BoatService {
     }
 
     @Transactional(readOnly = true)
-    @Cacheable(value="boatDTO", key="", unless="#result == null")
+    @Cacheable(value = "boatDTO", key = "", unless = "#result == null")
     public BoatDTO getById(Integer id) {
         Optional<Boat> opt = boatRepository.findById(id);
         return (opt.isEmpty() ? null : boatToDto(opt.get()));
@@ -275,9 +285,9 @@ public class BoatService {
         dto.setPictures(boat.getPictures());
         dto.setRulesOfConduct(boat.getRulesOfConduct());
         dto.setReviews(boat.getReviews().stream().map(review -> reviewService.reviewToRPDTO(review))
-                           .collect(Collectors.toList()));
+                .collect(Collectors.toList()));
         dto.setDiscounts(boat.getDiscounts().stream().map(discount -> discountService.discountTODPDto(discount))
-                             .collect(Collectors.toList()));
+                .collect(Collectors.toList()));
         dto.setCanBeChanged(reservationRepository
                 .findByRentableAndCancelledAndStartDateTimeIsAfter(boat, false, LocalDateTime.now()).isEmpty());
         dto.setOwner(cottageOwnerService.CottageOwnerToCottageOwnerCPDto(boat.getOwner()));
@@ -287,7 +297,7 @@ public class BoatService {
 
     @Transactional(readOnly = false)
     public boolean update(BoatDTO boatDTO, MultipartFile[] multipartFiles) throws IOException {
-        try{
+        try {
             Optional<Boat> opt = boatRepository.findById(boatDTO.getId());
             Thread.sleep(10000);
             if (opt.isEmpty()) return false;
@@ -299,8 +309,7 @@ public class BoatService {
             copyDtoToBoat(boatDTO, boat);
             boatRepository.save(boat);
             return true;
-        }
-        catch (Exception e){
+        } catch (Exception e) {
             return false;
         }
     }
@@ -310,11 +319,11 @@ public class BoatService {
     }
 
     public List<BoatDTO> searchBoats(SearchParams searchParams) {
-        List<BoatDTO> boats = checkTags(this
-                .getBoatsOfOwner(searchParams.getOwnerUsername(), searchParams.isDeletable()), searchParams.getTags());
+        List<BoatDTO> boats = checkAvailableDates(checkTags(this
+                .getBoatsOfOwner(searchParams.getOwnerUsername(), searchParams.isDeletable()), searchParams.getTags()), searchParams);
         return filter(searchParams.getSearch().toLowerCase(), sortBoats(searchParams.getOrderBy(),
                 boats.stream().limit(searchParams.getNumberOfResults())
-                     .collect(Collectors.toList())));
+                        .collect(Collectors.toList())));
     }
 
     public List<BoatDTO> getBoats(boolean checkIsDeletable) {
@@ -348,36 +357,41 @@ public class BoatService {
         return switch (sortParam) {
             case "name-a" -> boats.stream().sorted(Comparator.comparing(BoatDTO::getName)).toList();
             case "name-d" -> boats.stream().sorted(Comparator.comparing(BoatDTO::getName, Comparator.reverseOrder()))
-                                  .toList();
+                    .toList();
             case "price-a" -> boats.stream().sorted(Comparator.comparing(BoatDTO::getPerHour)).toList();
             case "price-d" -> boats.stream()
-                                   .sorted(Comparator.comparing(BoatDTO::getPerHour, Comparator.reverseOrder()))
-                                   .toList();
+                    .sorted(Comparator.comparing(BoatDTO::getPerHour, Comparator.reverseOrder()))
+                    .toList();
             case "score-a" -> boats.stream().sorted(Comparator.comparing(BoatDTO::getAverageScore)).toList();
             case "score-d" -> boats.stream()
-                                   .sorted(Comparator.comparing(BoatDTO::getAverageScore, Comparator.reverseOrder()))
-                                   .toList();
+                    .sorted(Comparator.comparing(BoatDTO::getAverageScore, Comparator.reverseOrder()))
+                    .toList();
             default -> boats;
         };
     }
 
-    public List<BoatDTO> searchBoatsForOwner(SearchParams searchParams) {
-        List<BoatDTO> boats = checkTags(this
-                .getBoatsOfOwner(searchParams.getOwnerUsername(), searchParams.isDeletable()), searchParams.getTags());
-        return sortBoats(searchParams.getOrderBy(), boats.stream().limit(searchParams.getNumberOfResults())
-                                                         .filter(a -> a.getName().toLowerCase()
-                                                                       .contains(searchParams.getSearch()
-                                                                                             .toLowerCase()))
-                                                         .collect(Collectors.toList()));
+    private List<BoatDTO> checkAvailableDates(List<BoatDTO> boats, SearchParams searchParams) {
+        if (StringUtils.isEmpty(searchParams.getStart()) && StringUtils.isEmpty(searchParams.getEnd())) return boats;
+        LocalDate start = StringUtils.isEmpty(searchParams.getStart()) ? LocalDate.of(2022, 1, 1) : LocalDate.parse(searchParams.getStart(), DateTimeFormatter
+                .ofPattern("yyyy-MM-dd"));
+        LocalDate end = StringUtils.isEmpty(searchParams.getEnd()) ? LocalDate.of(2022, 12, 31) : LocalDate
+                .parse(searchParams.getEnd(), DateTimeFormatter
+                        .ofPattern("yyyy-MM-dd"));
+
+        return boats.stream()
+                .filter(x ->
+                        availabilityService
+                                .hasAvailabilities(x.getId(), start.atTime(0, 0), end.atTime(23, 59)))
+                .toList();
     }
 
     private List<BoatDTO> getBoatsOfOwner(String ownerUsername, boolean checkIsDeletable) {
         if (ownerUsername != null) {
             return boatRepository.findByOwnerUsername(ownerUsername).stream()
-                                 .filter(x -> !checkIsDeletable || (reservationRepository
-                                         .findByRentableAndCancelledAndStartDateTimeIsAfter(x, false, LocalDateTime
-                                                 .now()).isEmpty()))
-                                 .map(this::boatToDto).collect(Collectors.toList());
+                    .filter(x -> !checkIsDeletable || (reservationRepository
+                            .findByRentableAndCancelledAndStartDateTimeIsAfter(x, false, LocalDateTime
+                                    .now()).isEmpty()))
+                    .map(this::boatToDto).collect(Collectors.toList());
         } else return getBoats(checkIsDeletable);
     }
 }
